# Notto

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  PHASE1_COMPLETE.md  README.md  TODO.md  index.html  package-lock.json  package.json  project_charter.md  tailwind.config.js  technical_infos.md  tsconfig.json  vite.config.ts
client/src-tauri/src/: lib.rs
client/src-tauri/src/crypt/: mod.rs
mariadb/: docker-compose.yml
notto-client/: index.html  package-lock.json  package.json
notto-client/src/: App.tsx
notto-client/src-tauri/: Cargo.toml
notto-client/src-tauri/src/: commands.rs  lib.rs  main.rs
notto-client/src-tauri/src/crypt/: mod.rs
notto-client/src-tauri/src/db/: mod.rs  operations.rs  schema.rs
notto-client/src-tauri/src/sync/: mod.rs  operations.rs  service.rs
notto-client/src/components/: Home.tsx  Login.tsx  Sync.tsx
notto-client/src/components/Login/: CreateAccount.tsx  Login.tsx  LoginHome.tsx
notto-client/src/store/: general.tsx
notto-server/: Cargo.toml
notto-server/src/: main.rs  schema.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri-2/Notto/: package-lock.json  package.json
src-tauri-2/Notto/src-tauri/: Cargo.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs
src-tauri/src/auth/: mod.rs  password.rs  session.rs  totp.rs
src-tauri/src/commands/: auth.rs  folders.rs  mod.rs  notes.rs  sync.rs
src-tauri/src/crypt/: mod.rs
src-tauri/src/crypto/: encryption.rs  key_derivation.rs  mod.rs  recovery_phrase.rs
src-tauri/src/db/: mod.rs  operations.rs  schema.rs
src-tauri/src/sync/: client.rs  conflict.rs  mod.rs  models.rs
src/components/: LoginForm.tsx  MarkdownEditor.tsx  NoteList.tsx  RegisterForm.tsx  SyncStatus.tsx
src/store/: appStore.ts
src/utils/: tauri.ts
