[package]
name = "notto-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = { version="0.4.42", features = ["serde"] }
dotenv = "0.15.0"
mysql_async = "0.36.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version="1.48.0", features = ["rt-multi-thread"]}
