[package]
name = "notto"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "notto"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-build = "2"

# Database
rusqlite = { version = "0.37", features = ["bundled", "chrono", "uuid"] }

# Encryption & Security
ring = "0.17"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.9.2"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client for CouchDB
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"

# Recovery phrases
bip39 = "2.0"

# TOTP 2FA
totp-lite = "2.0"
qrcode = "0.14"
base64 = "0.22"
urlencoding = "2.1"

# OS keychain
keyring = "3.6"

# Utilities
lazy_static = "1.4"
tauri-plugin-opener = "2.5.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }
