[package]
name = "notto"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "notto_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
shared = { path = "../../shared" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version="0.37.0", features = ["chrono"] }
tauri-plugin-log = "2.7.1"
argon2 = { version = "0.5.3", features = ["std"] }
aes-gcm = "0.10.3"
chrono = { version="0.4.42", features = ["serde"] }
bip39 = { version="2.2.0", features = ["rand"] }
reqwest = "0.12.24"
